2015-05-27  Michael Wiegand <michael.wiegand@greenbone.net>

	Improve handling of GnuTLS flags to ensure that the GnuTLS library
	found by pkg-config correctly takes precedence over other instances.

	* misc/CMakeLists.txt: Add GNUTLS_INCLUDE_DIRS to include_directories,
	uses GNUTLS_LDFLAGS when linking.

	* base/CMakeLists.txt: Add GNUTLS_INCLUDE_DIRS to include_directories,
	use GNUTLS_LDFLAGS (at the correct position) when linking.

2015-05-26  Sven Haardiek <sven.haardiek@greenbone.net>

	* doc/openvas-nasl-lint.1: Added this manpage for openvas-nasl-lint
	* CMakeLists.txt: Install manpage for openvas-nasl-lint

2015-05-26  Sven Haardiek <sven.haardiek@greenbone.net>

	* doc/openvas-nasl.1: Replaced minus-sign with hyphen

2015-05-26  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* nasl/nasl_init.c (libfuncs): Add snmpv2c_get().

	* nasl/nasl_snmp.c (snmpv1_get): Add version parameter. Rename to
	snmpv1v2c_get().
	(nasl_snmpv2c_get, nasl_snmpv1v2c_get): New functions.
	(nasl_snmpv1_get): Adjust to call new function.

	* nasl/nasl_snmp.h: Add function prototype.

2015-05-22  Matthew Mundell <matthew.mundell@greenbone.net>

	* misc/ldap_connect_auth.c (ldap_auth_info_from_function): Remove.  No
	longer used.
	(ldap_auth_info_new): Define dummy version.

	* misc/ldap_connect_auth.h: Update headers accordingly.

2015-05-22  Matthew Mundell <matthew.mundell@greenbone.net>

	* misc/ldap_connect_auth.c: Define dummy functions when ENABLE_LDAP_AUTH
	is not defined.

2015-05-22  Matthew Mundell <matthew.mundell@greenbone.net>

	* doc/example.auth.conf: Remove.  No longer used.

2015-05-21  Matthew Mundell <matthew.mundell@greenbone.net>

	Remove remaining unused parts of auth.

	* misc/openvas_auth.c: Remove file doc which is out of date.
	(authenticators, ldap_connect_configured, struct authenticator)
	(authenticator_t, get_ldap_info, order_compare)
	(classic_authenticator_new): Remove.  No longer used.
	(openvas_auth_init_funcs): Remove.  Now openvas_auth_init.