@@ -36,7 +36,7 @@ if (SNMP)
   add_definitions (-DHAVE_NETSNMP)
 endif (SNMP)
 
-
+pkg_check_modules (GIO REQUIRED gio-2.0)
 
 # The "-D_FILE_OFFSET_BITS=64 -DLARGEFILE_SOURCE=1" is necessary for GPGME!
 # The "-fno-strict-aliasing" silences warnings caused by macros defined in byteorder.h.
@@ -113,7 +113,7 @@ if (BUILD_STATIC)
                           ${GNUTLS_LDFLAGS} ${PCAP_LDFLAGS}
                           ${OPENVAS_WMICLIENT_LDFLAGS}
                           ${OPENVAS_WINCMD_LDFLAGS} ${SNMP_LDFLAGS}
-                          ${LIBSSH_LDFLAGS} ${KSBA_LDFLAGS})
+                          ${LIBSSH_LDFLAGS} ${KSBA_LDFLAGS} m)
 endif (BUILD_STATIC)
 
 if (BUILD_SHARED)
@@ -142,10 +142,10 @@ endif (BUILD_SHARED)
 # Link the openvas-nasl-lint executable
 add_executable (openvas-nasl-lint nasl-lint.c)
 if (BUILD_STATIC)
-  target_link_libraries (openvas-nasl-lint openvas_nasl_static)
+  target_link_libraries (openvas-nasl-lint openvas_nasl_static ${GLIB_LDFLAGS} ${GIO_LDFLAGS})
 endif (BUILD_STATIC)
 if (BUILD_SHARED)
-  target_link_libraries (openvas-nasl-lint openvas_nasl_shared)
+  target_link_libraries (openvas-nasl-lint openvas_nasl_shared ${GLIB_LDFLAGS} ${GIO_LDFLAGS})
 endif (BUILD_SHARED)
 
 ## Install
